fix layout bug in index and add contact page

--- a/style.css
+++ b/style.css
@@ -154,6 +154,11 @@ li.sep {
     margin-left: 12px;
 }
 
+.row {
+   
+    display: flex;  
+    justify-content: center;  
+}
 
 
 .row-content-1 {
@@ -385,7 +390,8 @@ footer {
     text-decoration: underline;
 }
 
-.row {
+
+.row_contact {
     border: 1px solid green;
     display: flex;
     justify-content: space-between;
@@ -397,34 +403,23 @@ footer {
     border: 1px solid red;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: flex-start;
-    
-    
-   
 }
 .col:nth-child(1){
   flex-basis: 122px;
-    
-    
-   
+  height: 36px;  
 }
 
 .col:nth-child(2){
     flex-basis: 440px;
-    height: 426px;
-      
-      
-     
+    height: 426px;   
   }
 
   .col:nth-child(3){
     flex-basis: 292px;
-    height: 426px;
-      
-     
+    height: 426px;     
   }
-  
 
 
 main.contact-page{
@@ -437,6 +432,49 @@ main.contact-page{
 }
 
 .content{
-    border: 1px solid black;
+    
+}
+form.contact-form label{
+    display: inline-block;
+    font-size: 12px;
+    width: 75px;
 }
 
+
+.contact-form{
+    border: 1px solid black;
+    width: 385px;
+    height: 357px;
+    background: rgb(236, 236, 236);
+    background: linear-gradient(0deg, rgba(236, 236, 236, 1) 33%, rgba(254, 254, 254, 1) 79%);
+    border-top-right-radius:20px;
+}
+
+.col>.content-5,.col>.content-6{
+    border: 1px solid black;
+    border-top-right-radius:20px;
+    width: 292px;
+    height: 175px;
+    background: rgb(236, 236, 236);
+    background: linear-gradient(0deg, rgba(236, 236, 236, 1) 33%, rgba(254, 254, 254, 1) 79%);
+
+}
+
+.fields>textarea{
+    padding: 3px;
+    width: 243px;
+    height: 108px;
+    border: 1px solid #808992;
+}
+
+.fields input{
+    width: 168px;
+    padding: 3px;
+    margin: 3px;
+    border: 1px solid #808992;
+}
+
+.fields{
+    width: 260px;
+    height: 216px;
+}
